apps/base/odysseus/searxng-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odysseus-searxng
  namespace: apps
spec:
  selector:
    app: odysseus-searxng
  ports:
    - port: 8080
      targetPort: 8080
