apps/base/odysseus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odysseus
  namespace: apps
spec:
  selector:
    app: odysseus
  ports:
    - port: 80
      targetPort: 7000
